--- a/.github/workflows/update-packages.yml
+++ b/.github/workflows/update-packages.yml
@@ -8,7 +8,9 @@ on:
     branches:
       - main
   schedule:
-    - cron: 0 */12 * * *
+   # - cron: 0 */12 * * *
+    - cron:  45 3 * * *
+    
   watch:
     types: started
 
