--- a/.github/workflows/update-packages.yml
+++ b/.github/workflows/update-packages.yml
@@ -9,7 +9,7 @@ on:
       - main
   schedule:
    # - cron: 0 */12 * * *
-    - cron:  45 3 * * *
+   # - cron:  45 3 * * *
     
   watch:
     types: started
