--- a/.github/workflows/update-packages.yml
+++ b/.github/workflows/update-packages.yml
@@ -8,9 +8,8 @@ on:
     branches:
       - main
   schedule:
-   # - cron: 0 */12 * * *
-   # - cron:  45 3 * * *
-    
+    #- cron: 0 */12 * * *
+    - cron: 0 22 * * 6
   watch:
     types: started
 
